@@ -22,7 +22,17 @@
 #include "SDCCnaddr.hpp"
 
 void
-switchAddressSpacesOptimally (iCode *ic)
+switchAddressSpacesOptimally (iCode *ic, ebbIndex *ebbi)
 {
+  cfg_t control_flow_graph;
+  tree_dec_naddr_t tree_decomposition;
+
+  create_cfg_naddr(control_flow_graph, ic, ebbi);
+  annotate_cfg_naddr(control_flow_graph);
+
+  dump_cfg_naddr(control_flow_graph);
+
+  thorup_tree_decomposition(tree_decomposition, control_flow_graph);
+  nicify(tree_decomposition);
 }
 
