@@ -33,6 +33,7 @@ eBBlock **eBBlockFromiCode (iCode *);
 void printEbbs (eBBlock **);
 iCode *iCodeLabelOptimize (iCode *);
 eBBlock *iCode2eBBlock (iCode * ic);
-void switchAddressSpacesOptimally (iCode *ic);
+void switchAddressSpacesOptimally (iCode *ic, ebbIndex *ebbi);
+const symbol *getAddrspaceiCode (const iCode *ic);
 
 #endif
